# MicrocreditLRVB

./: DESCRIPTION  NAMESPACE  README  README.md  README.md~  compile_r_package.sh  test_model.cpp
R/: RcppExports.R  microcredit_stan_lib.R
inst/: notes.lyx  notes.lyx~
inst/R/: .Rhistory  Exploratory graphs.ipynb  boxcox.R  density_lib.R  graph_exploration.R  graphs_for_paper.R  microcredit_data_analysis.R  microcredit_eda.R  microcredit_function_sensitivity.R  microcredit_function_sensitivity_real_data.R  microcredit_lmer_analysis.R  microcredit_model_accuracy.R  microcredit_new_data_analysis.R  microcredit_parameter_sensitivity.R  microcredit_parameter_sensitivity_debugging.R  microcredit_stan_analysis.R  microcredit_stan_analysis_real_data.R  microcredit_stan_analysis_simulated.R  microcredit_stan_data_sensitivity.R  microcredit_stan_lib.R  microcredit_transform_fit.R  microcredit_vb_analysis.R  simple_model_debugging.R
inst/R/.ipynb_checkpoints/: Exploratory graphs-checkpoint.ipynb
inst/lrvb_cpp_old/: README.md
inst/lrvb_cpp_old/include/: differentiate_jacobian.h  exponential_families.h  kahan_summation.h  stan_lrvb_headers.h  sub_hessian.hpp  transform_hessian.h  variational_parameters.h
inst/lrvb_cpp_old/src/: .gitignore~  CMakeLists.txt  CMakeLists.txt~  exponential_families.cpp  kahan_summation.cpp  variational_parameters.cpp
inst/lrvb_cpp_old/src/test/: .gitignore  .gitignore~  CMakeLists.txt  kahan_summation_test.cpp  monte_carlo_parameter_test.cpp  test_eigen.h  transform_hessian_test.cpp  variational_parameter_test.cpp
inst/microcredit_cpp/: .gitignore  CMakeLists.txt
inst/microcredit_cpp/include/: differentiate_jacobian.h  exponential_families.h  microcredit_encoders.h  microcredit_model.h  microcredit_model_parameters.h  microcredit_probability_model.h  variational_parameters.h
inst/microcredit_cpp/src/: .gitignore  CMakeLists.txt  microcredit_model.cpp  transform_hessian.cpp
inst/stan/: basic_hierarchical_model_lkj_priors.Rdata  basic_hierarchical_model_lkj_priors.stan  basic_hierarchical_model_lkj_priors_lik.stan  hierarchical_model_spike.stan  hierarchical_model_spike_model.cpp
man/: MicroCreditLRVB-package.Rd
src/: Makevars  Makevars~  RcppExports.cpp  rcpp_wrapper.cpp
